增加导航栏

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,20 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/index.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <header><%= title %></header>
+    <ul class="nav">
+    	<li><a href="">网站首页</a></li>
+    	<li><a href="">关于我们</a></li>
+    	<li><a href="">产品展示</a></li>
+    	<li><a href="">厂房设备</a></li>
+    	<li><a href="">新闻资讯</a></li>
+    	<li><a href="">优秀案例</a></li>
+    	<li><a href="">人力资源</a></li>
+    	<li><a href="">下载中心</a></li>
+    	<li><a href="">联系我们</a></li>
+    </ul>
   </body>
 </html>
