--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <header><%= title %></header>
     <ul class="nav">
     	<li><a href="">网站首页</a></li>
-    	<li><a href="">关于我们</a></li>
+    	<li><a href="">公司简介</a></li>
     	<li><a href="">产品展示</a></li>
     	<li><a href="">厂房设备</a></li>
     	<li><a href="">新闻资讯</a></li>
