--- a/views/component/business/head-util.ejs
+++ b/views/component/business/head-util.ejs
@@ -1,4 +1,5 @@
 <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/css/<%= head.link  %>.css?v=1234345' />
+    <link href="http://cdn.bootcss.com/Swiper/3.4.2/css/swiper.min.css" rel="stylesheet">
 </head>
