--- a/views/component/business/nav.ejs
+++ b/views/component/business/nav.ejs
@@ -1,7 +1,7 @@
 <nav>
     <link rel="stylesheet" href="/css/nav.css?v=<% + new Date %>">
     <ul class="nav">
-        <li><a href="">网站首页</a></li>
+        <li><a href="">首页</a></li>
         <li><a href="">公司简介</a></li>
         <li><a href="">产品展示</a></li>
         <li><a href="">厂房设备</a></li>
