--- a/views/page/index.ejs
+++ b/views/page/index.ejs
@@ -6,10 +6,15 @@
     <% include ../component/business/header %>
     <!-- 导航栏 -->
     <% include ../component/business/nav %>
+    <!-- 轮播图 -->
+    <% include ../component/business/swiper %>
+    <!-- 内容介绍 -->
+    <% include ../component/business/index/main-content %>
     <!-- 页脚 -->
     <% include ../component/business/footer %>
     <!-- 版权 -->
     <% include ../component/business/copyright %>
+    <!-- CDN -->
     <% include ../component/business/script-util %>
   </body>
 </html>
