--- a/views/component/business/script-util.ejs
+++ b/views/component/business/script-util.ejs
@@ -1,2 +1,2 @@
-<script src="http://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-<script src="http://cdn.bootcss.com/Swiper/3.4.2/js/swiper.jquery.min.js"></script>
+<script src="/lib/jquery-3.2.1.min.js"></script>
+<script src="/lib/swiper-3.4.2.jquery.min.js"></script>
