--- a/views/component/business/index/main-content.ejs
+++ b/views/component/business/index/main-content.ejs
@@ -4,8 +4,8 @@
         <ul class="clearfix">
             <li class="fl"><img src="http://www.zymbo.cn/images/con_block1_pic1.png" alt=""></li>
             <li class="fr">
-                <h1>科技</h1>
-                <h2>驾驭家庭气候</h2>
+                <h2>科技</h2>
+                <h3>驾驭家庭气候</h3>
                 <p>为了体现公司“环保、节能、高效、时尚”的产品经营理念，公司在意大利的设计团队，一直致力于提高产品的科技含量，同时捕捉时尚元素，使产品更符合高端市场的需求。深宝空气源热泵热水器，体现“环保、节能、高效、时尚”理念，全方位为用户提供一个长期稳定、恒温舒适、节约能耗的热水生活享受。</p>
             </li>
         </ul>
@@ -14,15 +14,35 @@
         <ul class="clearfix">
             <li class="fl"><img src="http://www.zymbo.cn/images/con_block1_pic2.png" alt=""></li>
             <li class="fl">
-                <h1>创新</h1>
-                <h2>缔造品质生活</h2>
+                <h3>创新</h3>
+                <h4>缔造品质生活</h4>
                 <p>夏天，将室内热量转移到室外，实现制冷功能；冬季，吸收室内外大自然的热量，送到室内实现制热采暖，同时能满足日常生活中所需的热水，简而言之，就是消耗少量的电力来实现热量搬运，从而达到制冷，制热的目的。</p>
             </li>
             <li class="fl"><img src="http://www.zymbo.cn/images/con_block1_pic3.png" alt=""></li>
             <li class="fl">
-                <h1>专注</h1>
-                <h2>精益求精的执着</h2>
+                <h3>专注</h3>
+                <h4>精益求精的执着</h4>
                 <p>夏天，将室内热量转移到室外，实现制冷功能；冬季，吸收室内外大自然的热量，送到室内实现制热采暖，同时能满足日常生活中所需的热水，简而言之，就是消耗少量的电力来实现热量搬运，从而达到制冷，制热的目的。</p>
+            </li>
+        </ul>
+    </section>
+    <section class="section-3-col">
+        <h3>谷物烘干机</h3>
+        <ul class="clearfix">
+            <li class="fl">
+                <div><img src="http://www.zymbo.cn/images/solution_pic01.jpg" alt=""></div>
+                <h5>中央空调系统</h5>
+                <p>采用液体汽化制冷的原理为空气调节系统提供所需冷量，用以抵消室内环境的热负荷；制热系统为空气调节系统提供所需热量，用以抵消室内环境冷负荷。</p>
+            </li>
+            <li class="fl">
+                <div><img src="http://www.zymbo.cn/images/solution_pic01.jpg" alt=""></div>
+                <h5>中央空调系统</h5>
+                <p>采用液体汽化制冷的原理为空气调节系统提供所需冷量，用以抵消室内环境的热负荷；制热系统为空气调节系统提供所需热量，用以抵消室内环境冷负荷。</p>
+            </li>
+            <li class="fl">
+                <div><img src="http://www.zymbo.cn/images/solution_pic01.jpg" alt=""></div>
+                <h5>中央空调系统</h5>
+                <p>采用液体汽化制冷的原理为空气调节系统提供所需冷量，用以抵消室内环境的热负荷；制热系统为空气调节系统提供所需热量，用以抵消室内环境冷负荷。</p>
             </li>
         </ul>
     </section>
