--- a/views/component/business/nav.ejs
+++ b/views/component/business/nav.ejs
@@ -1,6 +1,6 @@
-<nav>
+<div>
     <link rel="stylesheet" href="/css/nav.css?v=<% + new Date %>">
-    <ul class="nav">
+    <ul class="my-navagator clearfix">
         <li><a href="">首页</a></li>
         <li><a href="">公司简介</a></li>
         <li><a href="">产品展示</a></li>
@@ -11,4 +11,4 @@
         <li><a href="">下载中心</a></li>
         <li><a href="">联系我们</a></li>
     </ul>
-</nav>
+</div>
