--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,3 +1,3 @@
-header{height:118px;line-height:118px;padding-left:10%}
+header{height:118px;line-height:118px;margin-left:10%;font-size:30px}header .ellipsis{width:100%;overflow:hidden;white-space:nowrap;word-break:keep-all;text-overflow:ellipsis}
 
 /*# sourceMappingURL=sourcemap/header.css.map */
