--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,3 +1,3 @@
-.nav{height:48px;line-height:48px;background-color:#006d46;padding-left:10%;overflow:hidden}.nav li{width:150px;float:left;text-align:center}.nav li a{font-size:16px;color:#fff;text-decoration:none}.nav li a:hover{border-bottom:1px solid #FFF}
+.my-navagator{width:100%;line-height:48px;background-color:#006d46;padding-left:10%;margin:0}.my-navagator li{width:10%;float:left;text-align:center;overflow:hidden}.my-navagator li a{font-size:16px;color:#fff;text-decoration:none;padding:0}.my-navagator li a:hover{border-bottom:1px solid #FFF}
 
 /*# sourceMappingURL=sourcemap/nav.css.map */
