--- a/public/scss/main-content.scss
+++ b/public/scss/main-content.scss
@@ -4,6 +4,7 @@
     section {
         margin-top: 80px;
         img{
+            width: 100%;
             overflow: hidden;
             transition: all .5s ease-in .1s;
             &:hover {
@@ -11,24 +12,91 @@
                 transform: scale(1.2);
             }
         }
+        h1 {
+            margin: 0;
+            padding: 0;
+        }
     }
     .section-2-col {
+        h2 {
+            font-size: 44px;
+            color: #262626;
+            font-weight: normal;
+        }
+        h3 {
+            font-size: 32px;
+            color: #262626;
+            font-weight: normal;
+        }
+        p {
+            font-size: 14px;
+            color: #737373;
+            line-height: 24px;
+            text-indent: 2em;
+            margin-top: 20px;
+        }
         &:first-child {
             li {
                 &:first-child {
-                    max-width: 860px;
+                    max-width: 72%;
                     overflow: hidden;
                 }
                 &:last-child {
-                    max-width: 300px;
+                    max-width: 25%;
                     overflow: hidden;
                 }
             }
         }
     }
+    .section-3-col {
+        h3 {
+            margin-top: 0;
+            margin-bottom: 50px;
+            font-size: 40px;
+            color: #262626;
+            text-align: center;
+        }
+        h5 {
+            font-size: 24px;
+            color: #262626;
+            margin: 8px 0;
+            font-weight: normal;
+        }
+        p {
+            font-size: 14px;
+            line-height: 24px;
+            color: #737373;
+            text-indent: 2em;
+        }
+        div {
+            overflow: hidden;
+        }
+        li {
+                width: 30%;
+                margin-right: 2%;
+        }
+    }
     .section-4-col {
+        h3 {
+            font-size: 34px;
+            color: #262626;
+            font-weight: normal;
+            margin: 0;
+        }
+        h4 {
+            font-size: 24px;
+            color: #262626;
+            font-weight: normal;
+        }
+        p {
+            font-size: 12px;
+            color: #737373;
+            line-height: 22px;
+            margin-top: 15px;
+        }
         li{
-            width: 25%;
+            width: 23%;
+            margin-right: 2%;
             overflow: hidden;
         }
 
