--- a/views/component/business/footer.ejs
+++ b/views/component/business/footer.ejs
@@ -3,36 +3,27 @@
     <ul class="clearfix">
         <li class="item">
             <a href="">公司简介</a>
-            <ul>
-                <li><a href="">公司介绍</a></li>
-                <li><a href="">组织架构</a></li>
-                <li><a href="">办公环境</a></li>
-                <li><a href="">专利证书</a></li>
-            </ul>
+            <a href="">公司介绍</a>
+            <a href="">组织架构</a>
+            <a href="">办公环境</a>
+            <a href="">专利证书</a>
         </li>
         <li class="item">
             <a href="">产品介绍</a>
-            <ul>
-                <li><a href="">厂房设备</a></li>
-            </ul>
+            <a href="">厂房设备</a>
         </li>
         <li class="item">
             <a href="">新闻资讯</a>
-            <ul>
-                <li><a href="">工程案例</a></li>
-            </ul>
+            <a href="">工程案例</a>
         </li>
         <li class="item">
             <a href="">人力资源</a>
-            <ul>
-                <li><a href="">下载中心</a></li>
-            </ul>
+            <a href="">下载中心</a>
         </li>
         <li class="item">
             <a href="">联系我们</a>
-            <ul>
-                <li><a href="">客户留言</a></li>
-                <li><a href="">联系我们</a></li>
+            <a href="">客户留言</a>
+            <a href="">联系我们</a>
             </ul>
         </li>
     </ul>
