--- a/views/component/business/header.ejs
+++ b/views/component/business/header.ejs
@@ -1,4 +1,4 @@
-<header>
+<header class="ellipsis">
     <link rel="stylesheet" href="/css/header.css?v=<% new Date %>">
     <%= title %>
 </header>
