--- a/views/component/business/script-util.ejs
+++ b/views/component/business/script-util.ejs
@@ -1,2 +1,3 @@
 <script src="/lib/jquery-3.2.1.min.js"></script>
-<script src="/lib/swiper-3.4.2.jquery.min.js"></script>
+<!-- <script src="/lib/swiper-3.4.2.jquery.min.js"></script> -->
+<script src="http://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
