--- a/views/component/business/swiper.ejs
+++ b/views/component/business/swiper.ejs
@@ -1,38 +1,54 @@
-<link rel="stylesheet" href="/css/swiper.css?v=1234">
-<div class="swiper-container J-swiper-container">
-    <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="http://www.zymbo.cn/imageRepository/764c7c3f-ffa5-4f37-be6c-e7fe8a77503a.jpg" alt=""></div>
-        <div class="swiper-slide"><img src="http://www.zymbo.cn/imageRepository/69e5096a-c1f1-45ed-b507-c6a0dcd57522.jpg" alt=""></div>
-        <div class="swiper-slide"><img src="http://www.zymbo.cn/imageRepository/af7e2fae-a3ca-4cbf-8061-879b816dfb5b.jpg" alt=""></div>
-        <div class="swiper-slide"><img src="http://www.zymbo.cn/imageRepository/78251279-0b53-4b88-9c8a-d2cb87a7fec4.jpg" alt=""></div>
+<div id="carousel-example-generic" class="carousel slide J-carousel" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="http://www.zymbo.cn/imageRepository/764c7c3f-ffa5-4f37-be6c-e7fe8a77503a.jpg" alt="...">
+      <div class="carousel-caption">
+        ...
+      </div>
     </div>
-    <!-- 如果需要分页器 -->
-    <div class="swiper-pagination J-swiper-pagination"></div>
+    <div class="item">
+      <img src="http://www.zymbo.cn/imageRepository/69e5096a-c1f1-45ed-b507-c6a0dcd57522.jpg" alt="...">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://www.zymbo.cn/imageRepository/af7e2fae-a3ca-4cbf-8061-879b816dfb5b.jpg" alt="...">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://www.zymbo.cn/imageRepository/78251279-0b53-4b88-9c8a-d2cb87a7fec4.jpg" alt="...">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+  </div>
 
-    <!-- 如果需要导航按钮 -->
-    <div class="swiper-button-prev swiper-button-white J-swiper-button-prev"></div>
-    <div class="swiper-button-next swiper-button-white J-swiper-button-next"></div>
-
-    <!-- 如果需要滚动条 -->
-    <div class="swiper-scrollbar J-swiper-scrollbar"></div>
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
-
 <script>
-window.onload = function () {
-    var mySwiper = new Swiper ('.J-swiper-container', {
-        direction: 'horizontal',
-        loop: true,
-        autoplay: 5000,
-        paginationClickable :true,
-        // 如果需要分页器
-        pagination: '.J-swiper-pagination',
-
-        // 如果需要前进后退按钮
-        nextButton: '.J-swiper-button-next',
-        prevButton: '.J-swiper-button-prev',
-
-        // 如果需要滚动条
-        scrollbar: '.J-swiper-scrollbar',
-    });
-};
+    window.onload = function () {
+        $('.J-carousel').carousel({
+            interval: 2000
+        });
+    };
 </script>
