--- a/public/scss/index.scss
+++ b/public/scss/index.scss
@@ -1,32 +1,2 @@
-body, ul, li, div, p, header, footer, h1, h2 {
-    margin: 0;
-    padding: 0;
-}
-li {
-    list-style: none;
-}
-.fl {
-    float: left;
-}
-.fr {
-    float: right;
-}
-.show {
-    display: block;
-}
-.hide, .none {
-    display: none;
-}
-.clearfix {
-    zoom : 1;
-    clear : both;
-}
-.clearfix:after {
-    visibility: hidden;
-    display: block;
-    font-size: 0;
-    content: " ";
-    clear: both;
-    height: 0
-}
+// 首页样式
 
