--- a/views/component/business/head-util.ejs
+++ b/views/component/business/head-util.ejs
@@ -3,7 +3,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title><%= title %></title>
+    <link rel='stylesheet' href='/css/common.css?v=1234345' />
     <link rel='stylesheet' href='/css/<%= head.link  %>.css?v=1234345' />
-    <!-- <link href="/lib/swiper-3.4.2.min.css" rel="stylesheet"> -->
+    <!-- <link href="/swiper-3.4.2.min.css" rel="stylesheet"> -->
     <link href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 </head>
