--- a/views/component/business/nav.ejs
+++ b/views/component/business/nav.ejs
@@ -1,8 +1,8 @@
 <div>
     <link rel="stylesheet" href="/css/nav.css?v=<% + new Date %>">
     <ul class="my-navagator clearfix">
-        <li><a href="">首页</a></li>
-        <li><a href="">公司简介</a></li>
+        <li><a href="/index">首页</a></li>
+        <li><a href="/company">公司简介</a></li>
         <li><a href="">产品展示</a></li>
         <li><a href="">厂房设备</a></li>
         <li><a href="">新闻资讯</a></li>
