--- a/public/scss/company.scss
+++ b/public/scss/company.scss
@@ -11,9 +11,9 @@
             border: 1px #ccc solid;
             margin: 0 3px;
             &:hover {
-                background-color: #006d46;
+                background-color: #01462d;
                 color: #fff;
-                border: 1px #006d46 solid;
+                border: 1px #01462d solid;
                 cursor: pointer;
             }
         }
