--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,3 +1,3 @@
-footer{margin-top:50px;clear:both;background:#2e2e2e;padding:50px 0}footer ul{max-width:1200px;margin:0 auto}footer .item{float:left;margin-right:100px}footer .item>a{display:block;font-size:14px;line-height:25px;color:#e5e5e5;text-decoration:none}footer li{list-style:none}
+footer{margin-top:50px;clear:both;background:rgba(0,107,70,0.9);padding:50px 0}footer ul{max-width:1200px;margin:0 auto}footer .item{float:left;margin-right:100px}footer .item>a{display:block;font-size:14px;line-height:25px;color:#FFF;text-decoration:none}footer li{list-style:none}
 
 /*# sourceMappingURL=sourcemap/footer.css.map */
