--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,3 +1,3 @@
-.my-navagator{width:100%;line-height:48px;background-color:#006d46;padding-left:10%;margin:0}.my-navagator li{width:10%;float:left;text-align:center;overflow:hidden}.my-navagator li a{font-size:16px;color:#fff;text-decoration:none;padding:0}.my-navagator li a:hover{border-bottom:1px solid #FFF}
+.my-navagator{width:100%;line-height:48px;background-color:#006d46;padding-left:10%;margin:0}.my-navagator li{width:10%;float:left;text-align:center;overflow:hidden}.my-navagator li:hover{cursor:pointer;background-color:rgba(1,70,45,0.7)}.my-navagator li a{display:inline-block;width:100%;font-size:16px;color:#fff;text-decoration:none;padding:0}
 
 /*# sourceMappingURL=sourcemap/nav.css.map */
