--- a/public/scss/copyright.scss
+++ b/public/scss/copyright.scss
@@ -1,10 +1,10 @@
 // 版权
 .copyright {
     font-size: 12px;
-    color: #595959;
+    color: #FFF;
     height: 48px;
     line-height: 48px;
-    background: #1f1f1f;
+    background: rgba(0, 109, 70, 1);
     padding-left: 10%;
     p {
 	    margin: 0;
