--- a/public/scss/nav.scss
+++ b/public/scss/nav.scss
@@ -1,7 +1,6 @@
 // 导航栏
 .my-navagator {
     width: 100%;
-    // height: 48px;
     line-height: 48px;
     background-color: #006d46;
     padding-left: 10%;
@@ -11,14 +10,17 @@
         float: left;
         text-align: center;
         overflow: hidden;
+        &:hover {
+            cursor: pointer;
+            background-color: rgba(1, 70, 45, .7);
+        }
         a {
+            display: inline-block;
+            width: 100%;
             font-size: 16px;
             color: #fff;
             text-decoration: none;
             padding: 0;
-            &:hover {
-                border-bottom: 1px solid #FFF;
-            }
         }
     }
 }
