--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,3 +1,3 @@
-header{color:#006d46;height:118px;line-height:118px;padding-left:10%;font-size:30px;border-top:3px #006d46 solid;overflow:hidden}header span{transition:all .2s ease-in .2s}header span:hover{cursor:pointer;transform:scale(1.2);text-shadow:0 5px 5px #006d46}header .ellipsis{width:100%;overflow:hidden;white-space:nowrap;word-break:keep-all;text-overflow:ellipsis}
+header{height:118px;line-height:118px;padding-left:10%;font-size:30px;border-top:3px #006d46 solid;overflow:hidden}header .ellipsis{width:100%;overflow:hidden;white-space:nowrap;word-break:keep-all;text-overflow:ellipsis}
 
 /*# sourceMappingURL=sourcemap/header.css.map */
