--- a/views/component/business/nav.ejs
+++ b/views/component/business/nav.ejs
@@ -4,7 +4,7 @@
         <li><a href="/index">首页</a></li>
         <li><a href="/company">公司简介</a></li>
         <li><a href="">产品展示</a></li>
-        <li><a href="">厂房设备</a></li>
+        <li><a href="/equipment">厂房设备</a></li>
         <li><a href="">新闻资讯</a></li>
         <li><a href="">优秀案例</a></li>
         <li><a href="">人力资源</a></li>
