--- a/public/scss/copyright.scss
+++ b/public/scss/copyright.scss
@@ -5,8 +5,8 @@
     height: 48px;
     line-height: 48px;
     background: rgba(0, 109, 70, 1);
-    padding-left: 10%;
     p {
-	    margin: 0;
+	    margin: 0 auto;
+        max-width: 1200px;
     }
 }
