--- a/public/css/copyright.css
+++ b/public/css/copyright.css
@@ -1,3 +1,3 @@
-.copyright{font-size:12px;color:#FFF;height:48px;line-height:48px;background:#006d46;padding-left:10%}.copyright p{margin:0}
+.copyright{font-size:12px;color:#FFF;height:48px;line-height:48px;background:#006d46}.copyright p{margin:0 auto;max-width:1200px}
 
 /*# sourceMappingURL=sourcemap/copyright.css.map */
