--- a/views/page/equipment.html
+++ b/views/page/equipment.html
@@ -9,7 +9,7 @@
     <!-- 轮播图 -->
     <% include ../component/business/swiper %>
     <!-- 厂房设备 -->
-    
+    <% include ../component/business/equipment/equipment-intro %>
     <!-- 页脚 -->
     <% include ../component/business/footer %>
     <!-- 版权 -->
