--- a/public/scss/main-content.scss
+++ b/public/scss/main-content.scss
@@ -1,3 +1,5 @@
+@import 'common.scss';
+
 .wrap-section {
     margin: 0 auto;
     max-width: 1200px;
@@ -72,11 +74,7 @@
             overflow: hidden;
         }
         li {
-            width: 32%;
-            margin-right: 2%;
-            &:last-child {
-                margin-right: 0;
-            }
+            @include col-3();
         }
     }
     .section-4-col {
