--- a/public/scss/footer.scss
+++ b/public/scss/footer.scss
@@ -35,6 +35,9 @@ footer {
             &:hover {
                 color: #FFF
             }
+            &:visited {
+                color: #FFF;
+            }
         }
     }
 }
