--- a/public/scss/header.scss
+++ b/public/scss/header.scss
@@ -1,7 +1,7 @@
 header {
     height: 118px;
     line-height: 118px;
-    padding-left: 10%;
+    padding-left: 10% !important;
     font-size: 30px;
     border-top: 3px rgba(0, 109, 70, 1) solid;
     overflow: hidden;
