--- a/views/component/business/footer.ejs
+++ b/views/component/business/footer.ejs
@@ -27,5 +27,5 @@
             </ul>
         </li>
     </ul>
-    <p><span>友情链接：</span><a href="http://www.zymbo.cn/">中山深宝电器制造有限公司</a></p>
+    <p><span>友情链接：</span><a target="_blank" href="http://www.zymbo.cn/">中山深宝电器制造有限公司</a></p>
 </footer>
