--- a/public/css/company.css
+++ b/public/css/company.css
@@ -1,3 +1,3 @@
-.company-intro{margin:80px 0 60px 0}.company-intro .company-content{text-align:center;margin-bottom:25px}.company-intro .company-content li{display:inline-block;font-size:14px;padding:7px 19px;border:1px #ccc solid;margin:0 3px}.company-intro .company-content li:hover{background-color:#01462d;color:#fff;border:1px #01462d solid;cursor:pointer}
+.company-intro{margin:80px 0 60px 0}.company-intro .company-content{text-align:center;margin-bottom:25px}.company-intro .company-content li{display:inline-block;font-size:14px;padding:7px 19px;border:1px #ccc solid;margin:0 3px}.company-intro .company-content li:hover{background-color:rgba(0,107,70,0.9);color:#fff;border:1px rgba(0,107,70,0.9) solid;cursor:pointer}
 
 /*# sourceMappingURL=sourcemap/company.css.map */
