--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,3 +1,3 @@
-header{height:118px;line-height:118px;padding-left:10%;font-size:30px;border-top:3px #006d46 solid;overflow:hidden}header .ellipsis{width:100%;overflow:hidden;white-space:nowrap;word-break:keep-all;text-overflow:ellipsis}
+header{height:118px;line-height:118px;padding-left:10% !important;font-size:30px;border-top:3px #006d46 solid;overflow:hidden}header .ellipsis{width:100%;overflow:hidden;white-space:nowrap;word-break:keep-all;text-overflow:ellipsis}
 
 /*# sourceMappingURL=sourcemap/header.css.map */
