--- a/views/component/business/script-util.ejs
+++ b/views/component/business/script-util.ejs
@@ -1,3 +1,6 @@
 <script src="/jquery-3.2.1.min.js"></script>
 <!-- <script src="/swiper-3.4.2.jquery.min.js"></script> -->
 <script src="http://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<% if(debug){ %>
+  <script src="/vconsole.min.js"></script>
+<% } %>
